# minimal-logic

./: index.html  minimal-logic.cabal  stack.yaml
app/: Main.hs  NewMain.hs
src/: Minimal.hs  Model.hs  OldMinimal.hs
