name:                minimal-logic
version:             0.1.0.0
synopsis:            A proof assistant and model checker for minimal logic.
description:         Please see README.md
homepage:            https://github.com/milesrout/minimal-logic
author:              Miles Rout
maintainer:          miles.rout@gmail.com
copyright:           2016 Miles Rout
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Minimal, Model
  build-depends:       base >= 4.7 && < 5
                     , containers
  default-language:    Haskell2010

executable minimal-logic-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , minimal-logic
  default-language:    Haskell2010

test-suite minimal-logic-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , minimal-logic
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/minimal-logic
